24 December 2025 v649: Layout: Fixed: Horizontal scrollbar appeared on small screens (mobile devices) Recent crashes: Filter bar now scrolls with content freeing screen space on mobile devices Mosaic: Filter bar now scrolls with content Statistics > General: Replaced 7 days stats with 30 days Removed DeCorrespondent week stats

--- a/main.css
+++ b/main.css
@@ -154,6 +154,7 @@ h3, .pageSubTitleFont {
 .pageInner {
   width: 700px;
   max-width: 100%;
+  box-sizing: border-box;
   margin: 0 auto;
   padding: 5px 10px;
 }
@@ -166,7 +167,6 @@ h3, .pageSubTitleFont {
 }
 
 #pageMain {
-  padding: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -420,6 +420,8 @@ h3, .pageSubTitleFont {
 .filterBar {
   display: none;
   position: relative;
+  width: 100%;
+  box-sizing: border-box;
   flex-wrap: wrap;
   row-gap: 5px;
   align-items: center;
@@ -447,6 +449,8 @@ h3, .pageSubTitleFont {
 
 .filterStatus {
   display: none;
+  width: 100%;
+  box-sizing: border-box;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
